<resources>
    <string name="app_name">Bytedance-Camp-Project</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">mini_tiktok</string>
    <string name="nav_header_subtitle">bytedance_camp_project</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="record">录制</string>
    <string name="confirm">Confirm</string>
    <string name="upload">Upload</string>
    <string name="user">用户名：</string>

    <string name="take_photo">拍照</string>
    <string name="camera">相机</string>
    <string name="home">首页</string>
    <string name="select">选取影片</string>
    <string name="reselect">重选</string>
    <string name="next">下一步</string>
    <string name="prev">上一步</string>
    <string name="choose_cover">选择封面</string>
    <string name="manual">手动选择</string>
    <string name="auto">自动生成</string>
    <string name="preview">预览</string>
    <string name="cover">封面</string>
    <string name="uplaod_success">上传成功</string>
    <string name="upload_fail">上传失败</string>
    <string name="uploading">上传中</string>
    <string name="at_least_1s">录制时间最小为1秒</string>
    <string name="loading">加载中</string>
    <string name="loading_fail">加载失败</string>

</resources>