<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".activity.NoteActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user" />
    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/bg_edit"
        android:gravity="start|top"
        android:padding="4dp"
        android:text="@string/nav_header_title"
        android:textColor="#1e1e1e" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:orientation="horizontal">
        <VideoView
            android:id="@+id/note_video"
            android:layout_width="180dp"
            android:layout_height="300dp"
            />
        <ImageView
            android:id="@+id/note_image"
            android:layout_width="180dp"
            android:layout_height="300dp"
            />

    </LinearLayout>

    <SeekBar
        android:id="@+id/note_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/note_choose"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="选择图片"/>
    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/confirm" />


</LinearLayout>