<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoverChooseActivity"
    android:orientation="vertical"
    android:background="@color/black">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto"
                android:textSize="12sp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:icon="@drawable/ic_baseline_autorenew_24"
                app:iconGravity="top"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:textColor="@color/white"
                app:iconTint="@color/white"
                app:rippleColor="@color/white" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_manual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manual"
                android:textSize="12sp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:icon="@drawable/ic_baseline_add_24"
                app:iconGravity="top"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:textColor="@color/white"
                app:iconTint="@color/white"
                app:rippleColor="@color/white" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                android:paddingVertical="8dp"
                android:layout_marginEnd="8dp"
                android:layout_gravity="center"
                android:text="@string/upload"
                android:textSize="18sp"
                style="@style/Widget.MaterialComponents.Button" />
        </LinearLayout>
    </LinearLayout>


    <ImageButton
        android:id="@+id/btn_prev"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:scaleType="fitXY"
        android:background="@null"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:tint="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/choose_cover"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/bg_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:alpha="0.6" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:indeterminate="true" />

    <TextView
        android:id="@+id/text_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/progress_upload"
        android:text="@string/uploading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>